<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AddTurmaActivity"
    android:orientation="vertical"
    android:background="#FF03DAC5"
    tools:ignore="MissingClass">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/tv_textoadicionarano"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="75dp"
            android:gravity="center"
            android:textSize="35sp"
            android:text="@string/Year"
            android:textColor="@color/black"
            >

        </TextView>

        <EditText
            android:id="@+id/et_adicionarano"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="135dp"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:inputType="number"
            android:text="">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_textoadiconardesignacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginLeft="75dp"

            android:text="@string/Definition">
        </TextView>

        <EditText
            android:id="@+id/et_adicionardesignacao"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:backgroundTint="@color/white"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:text="">
        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/bt_adicionarturma"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/Add">

    </Button>

    <Button
        android:id="@+id/bt_cancelaradicionarturma"
        android:layout_width="294dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:text="@string/Cancel">

    </Button>



</LinearLayout>